force-app/main/default/objects/Thermage_Treatment_s__c/Thermage_Treatment_s__c.object-meta.xml
<CustomObject>
    <label>Thermage Treatment(s)</label>
    <nameField>
        <label>Thermage Treatment(s) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Thermage Treatments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>