force-app/main/default/objects/Thermage_Treatment_s__c/fields/Lot_c__c.field-meta.xml
<CustomField>
    <fullName>Lot_c__c</fullName>
    <label>Lot_c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>