force-app/main/default/objects/Thermage_Treatment_s__c/fields/Pre_Tx_Weight__c.field-meta.xml
<CustomField>
    <fullName>Pre_Tx_Weight__c</fullName>
    <label>Pre-Tx Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>