force-app/main/default/objects/Thermage_Treatment_s__c/fields/Thermage_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Thermage_Treatment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Thermage Treatment</label>
    <referenceTo>Thermage_Treatment__c</referenceTo>
    <relationshipLabel>Thermage Treatments</relationshipLabel>
    <relationshipName>Thermage_Treatments</relationshipName>
    <type>Lookup</type>
</CustomField>